--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -14,10 +14,13 @@ core-context = { path = "../context" }
 core-serialization = { path = "../serialization" }
 core-pubsub = { path = "../pubsub" }
 
+num_cpus = "1.0"
 log = "0.4"
 tokio = "0.1"
 old_futures = { package = "futures", version = "0.1" }
-futures-preview = { version = "=0.3.0-alpha.14", features = [ "compat" ] }
+futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }
+futures-locks = "0.3"
+futures-timer = "0.1"
 bft-rs = { git = "https://github.com/cryptape/bft-rs.git", features = [ "verify_req" ], branch = "v0.3" }
 
 [dev-dependencies]
