fix(tx-pool): replace chashmap (#211)
* fix(tx-pool): replace chashmap

* p2p retry

* fix(tx-pool): package count

--- a/components/transaction-pool/Cargo.toml
+++ b/components/transaction-pool/Cargo.toml
@@ -12,7 +12,7 @@ core-storage = { path = "../../core/storage" }
 core-context = { path = "../../core/context" }
 core-pubsub = { path = "../../core/pubsub" }
 
-chashmap = "2.2.2"
+parking_lot = "0.7"
 futures = "0.1"
 log = "0.4"
 # TODO: rename futures01 instead
