--- a/core/crypto/Cargo.toml
+++ b/core/crypto/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2018"
 core-types = { path = "../types" }
 
 secp256k1 = { version = "0.12.2", features = ["rand"] }
+
+[dev-dependencies]
+hex = "0.3"
