--- a/components/jsonrpc/Cargo.toml
+++ b/components/jsonrpc/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
-actix = "0.8.0-alpha.3"
-actix-web = "1.0.0-alpha.6"
+actix = "0.8"
+actix-web = "1.0.0-beta.5"
 old_futures = { package = "futures", version = "0.1" }
 futures-preview = { version = "=0.3.0-alpha.14", features = ["compat"] }
 futures-util-preview = { version = "=0.3.0-alpha.14" }
