--- a/components/transaction-pool/Cargo.toml
+++ b/components/transaction-pool/Cargo.toml
@@ -12,7 +12,8 @@ core-storage = { path = "../../core/storage" }
 core-context = { path = "../../core/context" }
 core-pubsub = { path = "../../core/pubsub" }
 
-parking_lot = "0.7"
+hashbrown = "0.3"
+parking_lot = "0.8"
 futures = "0.1"
 log = "0.4"
 # TODO: rename futures01 instead
@@ -21,3 +22,6 @@ futures03 = { package = "futures-preview", version = "=0.3.0-alpha.14", features
 [dev-dependencies]
 components-database = { path = "../database" }
 hex = "0.3"
+uuid = { version = "0.7", features = ["serde", "v4"] }
+rayon = "1.0"
+chashmap = "2.2"
