feat(components/jsonrpc): Try to convert tx to cita::tx (#221)
* Try to convert tx to cita::tx

* Create a new crate for cita types

* Verify txs in consensus

* Fix test_checksum_encoding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 config-parser = { path = "common/config-parser" }
 logger = { path = "common/logger" }
+common-cita = { path = "common/cita" }
 
 # components-cita-jsonrpc = { path = "components/cita-jsonrpc" }
 components-jsonrpc = { path = "components/jsonrpc" }
@@ -36,6 +37,7 @@ futures-preview = { version = "=0.3.0-alpha.14", features = [ "compat" ] }
 
 [workspace]
 members = [
+  "common/cita",
   "common/config-parser",
   "common/logger",
 
