--- a/components/jsonrpc/Cargo.toml
+++ b/components/jsonrpc/Cargo.toml
@@ -23,11 +23,8 @@ env_logger = "0.6"
 ethereum-types-serialize = "0.2"
 json = "0.11"
 log = "0.4"
-prost = "0.5"
-prost-derive = "0.5"
 numext-fixed-uint = "0.1"
 numext-fixed-hash = "0.1"
-tiny-keccak = "1.4"
 
 core-context = { path = "../../core/context" }
 core-merkle = { path = "../../core/merkle" }
@@ -37,7 +34,5 @@ core-pubsub = { path = "../../core/pubsub" }
 core-storage = { path = "../../core/storage" }
 core-serialization = { path = "../../core/serialization" }
 core-crypto = { path = "../../core/crypto" }
+common-cita = { path = "../../common/cita" }
 logger = { path = "../../common/logger" }
-
-[build-dependencies]
-prost-build = "0.5"
