--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
+common-cita = { path = "../../common/cita" }
 core-storage = { path = "../storage" }
 core-runtime = { path = "../runtime" }
 core-types = { path = "../types" }
