--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,9 @@ __pycache__/
 *.py[cod]
 *.egg-info/
 
+# Dev data
+/devtools/chain/data/
 rocksdb*
-# bft
-file_wal
-bft_wal
+
 # macos
 .DS_Store
