feat: rewrite network component (#230)
* feat(core-networkv2): implement discovery protocol

* feat(core-networkv2): implement transmission protocol

* chore(networkv2): rename `NetContext` to `Context`

* fix(core-networkv2): transmission compilation failure

* feat(core-networkv2): implement p2p service

* feat(core-networkv2): implement basic peer manager

* fix(core-networkv2): handle dail result

* feat(core-networkv2): DefaultPeerManager is clonable, Send and Sync

* feat(core-networkv2): implement connection pool service handle

* style(core-newworkv2): log style

* chore(core-networkv2): add p2p service example

* chore(core-networkv2): encapsulate `ServiceControl`

* chore(core-networkv2): remove unused OutMessage

* chore(core-networkv2): rename `InMessage` to `SessionMessage`

* feat(core-networkv2): add transaction-pool message serialization

* feat(core-networkv2): implement tx-pool outbound message

* feat(core-networkv2): implement consensus outbound message

* chore(core-runtime): move all error definitions to core-runtime

* feat(core-networkv2): implement sync outbound message

* feat(core-networkv2): implement tx pool inbound message

* feat(core-networkv2): implement consensus inbound message

* style(core-networkv2): fmt code

* feat(core-networkv2): implement synchronizer inbound message

* chore(core-networkv2): change method to u32 for easy of use

* chore(core-networkv2): change Message field names

* chore(core-networkv2): add `insert_sync_block` to consensus trait

Network should not hold a consensus engine handle. This also make code
complex.

* chore(core-networkv2): format core-runtime

* feat(core-networkv2): implement job array for concurrent

* doc(core-networkv2): remove outdate todo

* chore(core-networkv2): implement constructor for InboundHandle

* chore(core-networkv2): remove synchronizer from InboundHandle

Actually, this is OutboundHandle.

* feat(job-workers)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,13 @@ components-database = { path = "components/database" }
 components-executor = { path = "components/executor" }
 components-transaction-pool = { path = "components/transaction-pool" }
 core-crypto = { path = "core/crypto" }
-core-p2p = { path = "core/p2p" }
 core-runtime = { path = "core/runtime" }
 core-storage = { path = "core/storage" }
 core-types = { path = "core/types" }
 core-consensus = { path = "core/consensus" }
 core-context = { path = "core/context" }
 core-pubsub = { path = "core/pubsub" }
-core-network = { path = "core/network" }
+core-networkv2 = { path = "core/networkv2" }
 
 hex = "0.3"
 tokio = "0.1"
@@ -40,17 +39,19 @@ members = [
   "common/cita",
   "common/config-parser",
   "common/logger",
+  "common/channel",
 
   "core/types",
   "core/runtime",
   "core/consensus",
   "core/storage",
-  "core/p2p",
   "core/crypto",
   "core/merkle",
   "core/pubsub",
-  "core/network",
   "core/context",
+
+  "core/networkv2",
+  "core/networkv2/message",
 
   "components/transaction-pool",
   "components/database",
