--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -1,40 +1,25 @@
 [package]
 name = "core-network"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
-core-p2p = { path = "../p2p", features = ["prost-message"] }
-core-types = { path = "../types" }
-core-serialization = { path = "../serialization" }
-core-consensus = { path = "../consensus" }
-core-crypto = { path = "../crypto" }
+common-channel = { path = "../../common/channel" }
+
+core-network-message = { path = "./message" }
 core-context = { path = "../context" }
+core-serialization = { path = "../serialization" }
 core-runtime = { path = "../runtime" }
-core-pubsub = { path = "../pubsub" }
-core-storage = { path = "../storage" }
+core-types = { path = "../types" }
 
-components-transaction-pool = { path = "../../components/transaction-pool" }
-
-config-parser = { path = "../../common/config-parser" }
-
-tentacle = "0.2.0-alpha.1"
+tentacle = "0.2.0-alpha.13"
+tentacle-discovery = "0.2"
 log = "0.4"
-futures = "0.1"
-prost = "0.5"
-bytes = "0.4"
+futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }
 serde_derive = "1.0"
 serde = "1.0"
-# TODO: rename futures01 instead
-futures03 = { package = "futures-preview", version = "0.3.0-alpha.14", features = [ "compat" ] }
-futures-locks = "0.3"
-uuid = "0.7"
-parking_lot = "0.7"
+hashbrown = "0.3"
+rand = "0.6"
+parking_lot = "0.8"
 tokio = "0.1"
-
-[dev-dependencies]
-env_logger = "0.6"
-runtime = "0.3.0-alpha.1"
-runtime-raw = "0.3.0-alpha.1"
-runtime-tokio = "0.3.0-alpha.2"
