--- a/common/logger/Cargo.toml
+++ b/common/logger/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "logger"
+name = "common-logger"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
