--- a/components/jsonrpc/Cargo.toml
+++ b/components/jsonrpc/Cargo.toml
@@ -26,6 +26,8 @@ log = "0.4"
 numext-fixed-uint = "0.1"
 numext-fixed-hash = "0.1"
 
+common-cita = { path = "../../common/cita" }
+
 core-context = { path = "../../core/context" }
 core-merkle = { path = "../../core/merkle" }
 core-runtime = { path = "../../core/runtime" }
@@ -34,5 +36,6 @@ core-pubsub = { path = "../../core/pubsub" }
 core-storage = { path = "../../core/storage" }
 core-serialization = { path = "../../core/serialization" }
 core-crypto = { path = "../../core/crypto" }
-common-cita = { path = "../../common/cita" }
-logger = { path = "../../common/logger" }
+
+[dev-dependencies]
+common-logger = { path = "../../common/logger" }
