--- a/core/network/message/Cargo.toml
+++ b/core/network/message/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "core-networkv2-message"
+name = "core-network-message"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
