feat(executor): Add flush for trie db. (#240)

--- a/components/executor/Cargo.toml
+++ b/components/executor/Cargo.toml
@@ -10,12 +10,14 @@ core-storage = { path = "../../core/storage" }
 core-types = { path = "../../core/types" }
 core-context = { path = "../../core/context" }
 
+hashbrown = "0.3"
+parking_lot = "0.8"
 cita-vm = "0.1"
 log = "0.4"
 futures = "0.1"
 ethereum-types = "0.4"
 hex = "0.3"
-cita_trie = "0.3"
+cita_trie = "0.4"
 
 [dev-dependencies]
 core-crypto = { path = "../../core/crypto" }
