--- a/devtools/chain/config.toml
+++ b/devtools/chain/config.toml
@@ -27,3 +27,21 @@ verifier_list = [ "7899EE7319601cbC2684709e0eC3A4807bb0Fd74" ]
 
 [synchronzer]
 broadcast_status_interval = 180000
+
+[rocksdb]
+# 1024 * 8 (8 KB)
+block_size = 8192
+# 1024 * 1024 * 8 (8 MiB)
+block_cache_size = 8388608
+# 1024 * 1024 * 256 (256 MiB)
+max_bytes_for_level_base = 268435456
+# 1024 * 1024 * 256 (256 MiB)
+max_bytes_for_level_multiplier = 268435456
+# 1024 * 1024 * 64 (64 MiB)
+write_buffer_size = 67108864
+# 1024 * 1024 * 64 (64 MiB)
+target_file_size_base = 67108864
+max_write_buffer_number = 4
+max_background_compactions = 2
+max_background_flushes = 2
+increase_parallelism = 3
