--- a/components/transaction-pool/Cargo.toml
+++ b/components/transaction-pool/Cargo.toml
@@ -15,12 +15,11 @@ core-storage = { path = "../../core/storage" }
 core-context = { path = "../../core/context" }
 core-pubsub = { path = "../../core/pubsub" }
 
-hashbrown = { version = "0.3", features = [ "rayon" ] }
 parking_lot = "0.8"
 futures = "0.1"
 log = "0.4"
 # TODO: rename futures01 instead
-futures03 = { package = "futures-preview", version = "=0.3.0-alpha.14", features = [ "compat" ] }
+futures03 = { package = "futures-preview", version = "0.3.0-alpha.16",features = [ "async-await", "nightly", "compat" ] }
 rayon = "1.0"
 
 [dev-dependencies]
