--- a/devtools/chain/config.toml
+++ b/devtools/chain/config.toml
@@ -14,8 +14,8 @@ payload_size = 8388608
 bootstrap_addresses = []
 listening_address = "127.0.0.1:1337"
 # 1024 * 1024 * 10 (10 MiB)
-send_buffer_size = 10485760
-recv_buffer_size = 10485760
+# send_buffer_size = 10485760
+# recv_buffer_size = 10485760
 max_connections = 40
 
 [txpool]
@@ -33,18 +33,18 @@ broadcast_status_interval = 180000
 
 [rocksdb]
 # 1024 * 8 (8 KB)
-block_size = 8192
+# block_size = 8192
 # 1024 * 1024 * 8 (8 MiB)
-block_cache_size = 8388608
+# block_cache_size = 8388608
 # 1024 * 1024 * 256 (256 MiB)
-max_bytes_for_level_base = 268435456
+# max_bytes_for_level_base = 268435456
 # 1024 * 1024 * 256 (256 MiB)
-max_bytes_for_level_multiplier = 268435456
+# max_bytes_for_level_multiplier = 268435456
 # 1024 * 1024 * 64 (64 MiB)
-write_buffer_size = 67108864
+# write_buffer_size = 67108864
 # 1024 * 1024 * 64 (64 MiB)
-target_file_size_base = 67108864
-max_write_buffer_number = 4
-max_background_compactions = 2
-max_background_flushes = 2
-increase_parallelism = 3
+# target_file_size_base = 67108864
+# max_write_buffer_number = 4
+# max_background_compactions = 2
+# max_background_flushes = 2
+# increase_parallelism = 3
