--- a/components/jsonrpc/Cargo.toml
+++ b/components/jsonrpc/Cargo.toml
@@ -37,6 +37,7 @@ core-pubsub = { path = "../../core/pubsub" }
 core-storage = { path = "../../core/storage" }
 core-serialization = { path = "../../core/serialization" }
 core-crypto = { path = "../../core/crypto" }
+core-network = { path = "../../core/network" }
 
 [dev-dependencies]
 common-logger = { path = "../../common/logger" }
