benches: add bench tests for executor (#254)
* benches: add bench tests for executor

* bugfix: use the right state_root

* fix: Add Cargo.lock

* chore: use test feature in nightly

--- a/components/executor/Cargo.toml
+++ b/components/executor/Cargo.toml
@@ -19,4 +19,5 @@ hex = "0.3"
 cita_trie = "0.4"
 
 [dev-dependencies]
+common-logger = { path = "../../common/logger" }
 core-crypto = { path = "../../core/crypto" }
