chore: switch to std futures (#258)
* chore(core-runtime): replace boxed future01 with std future

* chore(comp-database): upgrade to std future api

* chore(core-storage): upgrade to std future api

* chore(comp-tx-pool): upgrade to std future api

* chore(core-pubsub): remove future compat layer

* chore(core-serialization): remove unnecessary features

* chore(comp-executor): upgrade to std futures

* chore(core-consensus): upgrade to std futures api

* chore(core-network): upgrade to std futures api

* chore(comp-jsonrpc): upgrade to std futures api

* chore(muta): remove futures 01

* chore: update Cargo.lock

* fix(core-consensus): tokio timer shutdown error

Revert back to futures-timer crate. Tokio timer doens't work inside
`futures::executor::block_on`.

* chore(core-runtime): remove unused failure crate

* chore: update bft-rs

Fix ci failure

* chore: fixed bft-rs to specified commit version

--- a/components/database/Cargo.toml
+++ b/components/database/Cargo.toml
@@ -10,7 +10,6 @@ core-context = { path = "../../core/context" }
 
 log = "0.4"
 rocksdb = "0.12.0"
-futures-preview = { version = "0.3.0-alpha.16", features = [ "async-await", "nightly", "compat" ] }
 
 [dev-dependencies]
-futures01 = { package = "futures", version = "0.1" }
+futures-preview = "0.3.0-alpha.16"
