--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,7 @@ num_cpus = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-futures01 = { package = "futures", version = "0.1" }
-futures-preview = { version = "0.3.0-alpha.16", features = [ "async-await", "nightly", "compat" ] }
+futures-preview = { version = "0.3.0-alpha.16", features = [ "compat" ] }
 
 [workspace]
 members = [
