--- a/components/executor/Cargo.toml
+++ b/components/executor/Cargo.toml
@@ -13,10 +13,10 @@ core-context = { path = "../../core/context" }
 parking_lot = "0.8"
 cita-vm = "0.1"
 log = "0.4"
-futures = "0.1"
 ethereum-types = "0.4"
 hex = "0.3"
 cita_trie = "0.4"
+futures-preview = "0.3.0-alpha.16"
 
 [dev-dependencies]
 common-logger = { path = "../../common/logger" }
