--- a/core/pubsub/Cargo.toml
+++ b/core/pubsub/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
-futures-preview = { version = "0.3.0-alpha.16", features = [ "async-await", "nightly", "compat" ] }
+futures-preview = { version = "0.3.0-alpha.16", features = [ "async-await", "nightly" ] }
 uuid = { version = "0.7", features = [ "v4" ] }
 log = "0.4"
