--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -11,8 +11,7 @@ core-serialization = { path = "../serialization" }
 core-context = { path = "../context" }
 
 bytes = "0.4"
-old_futures = { package = "futures", version = "0.1" }
-futures-preview = { version = "0.3.0-alpha.16", features = [ "async-await", "nightly", "compat" ] }
+futures-preview = "0.3.0-alpha.16"
 byteorder = "1.3"
 
 [dev-dependencies]
