refactor: Taste runtime crate. (#268)
* chore(core-network): switch to runtime crate

* chore(main): wrap main in async runtime

* fix(main): clippy false-positives on needless lifetime

* chore(core-pubsub): replace std::thread::spawn with runtime spawn

* doc(core-pubsub): use runtime::spawn

* test(core-pubsub): use runtime::spawn

* chore(comp-tx-pool): use runtime::spawn

* fix(comp-tx-pool): some tests timeout

Switch from native runtime to tokio runtime

* chore(core-consensus): use runtime::spawn

* test(comp-tx-pool): speed up broadcast_txs test

* test(core-network): use runtime::test, remove block_on

* style(main): consistent struct init

* fix(comp-tx-pool): block on cache_broadcast_receiver

Use await instead

* style(comp-tx-pool): use ```for_each``` instead of loop in cache_broadcast_txs

--- a/components/transaction-pool/Cargo.toml
+++ b/components/transaction-pool/Cargo.toml
@@ -19,9 +19,11 @@ parking_lot = "0.8"
 log = "0.4"
 futures-preview = "0.3.0-alpha.16"
 rayon = "1.0"
+runtime = "0.3.0-alpha.4"
 
 [dev-dependencies]
 components-database = { path = "../database" }
 hex = "0.3"
 uuid = { version = "0.7", features = ["serde", "v4"] }
 chashmap = "2.2"
+runtime-tokio = "0.3.0-alpha.4"
