--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,14 +25,15 @@ core-network = { path = "core/network" }
 
 rayon = "1.0"
 hex = "0.3"
-tokio = "0.1"
 clap = "2.32"
 log = "0.4"
 num_cpus = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-futures-preview = { version = "0.3.0-alpha.16", features = [ "compat" ] }
+futures-preview = "0.3.0-alpha.16"
+runtime = "0.3.0-alpha.4"
+runtime-tokio = "0.3.0-alpha.4"
 
 [workspace]
 members = [
