--- a/core/pubsub/Cargo.toml
+++ b/core/pubsub/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 futures-preview = { version = "0.3.0-alpha.16", features = [ "async-await", "nightly" ] }
 uuid = { version = "0.7", features = [ "v4" ] }
 log = "0.4"
+runtime = "0.3.0-alpha.4"
