--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -21,8 +21,7 @@ tokio = "0.1"
 futures-timer = "0.1"
 # compat is required for tokio timer
 futures-preview = { version = "0.3.0-alpha.16", features = [ "compat" ] }
-# TODO: upgrade bft-rs
-bft-rs = { git = "https://github.com/cryptape/bft-rs.git", features = [ "verify_req" ], rev = "861aa4f" }
+bft-rs = { git = "https://github.com/cryptape/bft-rs.git", features = [ "verify_req" ], branch = "bft_for_muta" }
 rayon = "1.0"
 
 [dev-dependencies]
