--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "muta"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
+build = "build.rs"
+
+[build-dependencies]
+build-info = { path = "util/build-info" }
 
 [dependencies]
+build-info = { path = "util/build-info" }
+
 common-config-parser = { path = "common/config-parser" }
 common-logger = { path = "common/logger" }
 common-cita = { path = "common/cita" }
@@ -37,6 +43,8 @@ runtime-tokio = "0.3.0-alpha.4"
 
 [workspace]
 members = [
+  "util/build-info",
+
   "common/cita",
   "common/config-parser",
   "common/logger",
