--- a/core/dex/Cargo.toml
+++ b/core/dex/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "core-executor"
+name = "dex"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
@@ -7,14 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protocol = { path = "../../protocol" }
-dex = { path = "../dex" }
-
-hasher = { version = "0.1", features = ['hash-keccak'] }
-cita_trie = "2.0"
-bytes = "0.4"
-lazy_static = "1.4"
+async-trait = "0.1"
 derive_more = "0.15"
+bytes = "0.4"
+num-traits = "0.2"
+num-bigint = "0.2"
+serde_json = "1.0"
+serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"]}
+serde_with = "1.3"
 rlp = "0.4"
-rocksdb = "0.12"
-hex = "0.3"
+
+protocol = { path = "../../protocol" }
