--- a/common/merkle/Cargo.toml
+++ b/common/merkle/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytes = "0.4"
+static_merkle_tree = { git = "https://github.com/yejiayu/static-merkle-tree.git", branch = "trait_scope" }
+rlp = "0.3"
+rayon = "1.0"
+
+protocol = { path = "../../protocol" }
