--- a/devtools/docker/dockercompose/docker-compose-single.yaml
+++ b/devtools/docker/dockercompose/docker-compose-single.yaml
@@ -3,15 +3,13 @@ version: '2'
 services:
   node0:
     container_name: node0
-    image: muta_run
+    image: huwenchao/muta:latest
     hostname: node0
     environment:
-      - RUST_LOG=info,overlord=warn
       - RUST_BACKTRACE
     volumes:
-      - ../../../target/docker_target/debug:/app
-      - ../../../target:/chain_data
-      - .:/chain_config
+      - ./config-single.toml:/app/devtools/chain/config.toml
+      - ../../../target/data/single:/app/devtools/chain/data
     ports:
       - "1337:1337"
       - "8000:8000"
@@ -19,10 +17,6 @@ services:
       single:
         aliases:
           - node0
-    command: |
-      sh -c '
-      cd /chain_config;
-      /app/muta-chain -c config-single.toml init genesis.json;'
 
 networks:
   single:
