--- a/devtools/docker/dockercompose/docker-compose-bft.yaml
+++ b/devtools/docker/dockercompose/docker-compose-bft.yaml
@@ -3,15 +3,14 @@ version: '2'
 services:
   bft_node1:
     container_name: bft_node1
-    image: muta_run
+    image: huwenchao/muta:latest
     hostname: bft_node1
     environment:
       - RUST_LOG 
       - RUST_BACKTRACE 
     volumes:
-      - ../../../target/docker_target/debug:/app
-      - ../../../target:/chain_data
-      - .:/chain_config
+      - ./config-bft-1.toml:/app/devtools/chain/config.toml
+      - ../../../target/data/bft1:/app/devtools/chain/data
     networks:
       bft:
         aliases:
@@ -19,20 +18,21 @@ services:
         ipv4_address: 173.20.0.21
     command: |
       sh -c '
-      cd /chain_config;
-      /app/muta -c config-bft-1.toml init genesis.json;'
+      cd /app;
+      ./muta-chain;'
 
   bft_node2:
     container_name: bft_node2
-    image: muta_run
+    image: huwenchao/muta:latest
     hostname: bft_node2
     environment:
       - RUST_LOG 
       - RUST_BACKTRACE 
+    depends_on:
+      - bft_node1
     volumes:
-      - ../../../target/docker_target/debug:/app
-      - ../../../target:/chain_data
-      - .:/chain_config
+      - ./config-bft-2.toml:/app/devtools/chain/config.toml
+      - ../../../target/data/bft2:/app/devtools/chain/data
     networks:
       bft:
         aliases:
@@ -40,20 +40,21 @@ services:
         ipv4_address: 173.20.0.22
     command: |
       sh -c '
-      cd /chain_config;
-      /app/muta -c config-bft-2.toml init genesis.json;'
+      cd /app;
+      ./muta-chain;'
 
   bft_node3:
     container_name: bft_node3
-    image: muta_run
+    image: huwenchao/muta:latest
     hostname: bft_node3
     environment:
       - RUST_LOG 
       - RUST_BACKTRACE 
+    depends_on:
+      - bft_node1
     volumes:
-      - ../../../target/docker_target/debug:/app
-      - ../../../target:/chain_data
-      - .:/chain_config
+      - ./config-bft-3.toml:/app/devtools/chain/config.toml
+      - ../../../target/data/bft3:/app/devtools/chain/data
     networks:
       bft:
         aliases:
@@ -61,20 +62,21 @@ services:
         ipv4_address: 173.20.0.23
     command: |
       sh -c '
-      cd /chain_config;
-      /app/muta -c config-bft-3.toml init genesis.json;'
+      cd /app;
+      ./muta-chain;'
 
   bft_node4:
     container_name: bft_node4
-    image: muta_run
+    image: huwenchao/muta:latest
     hostname: bft_node4
     environment:
       - RUST_LOG 
       - RUST_BACKTRACE 
+    depends_on:
+      - bft_node1
     volumes:
-      - ../../../target/docker_target/debug:/app
-      - ../../../target:/chain_data
-      - .:/chain_config
+      - ./config-bft-4.toml:/app/devtools/chain/config.toml
+      - ../../../target/data/bft4:/app/devtools/chain/data
     networks:
       bft:
         aliases:
@@ -82,8 +84,8 @@ services:
         ipv4_address: 173.20.0.24
     command: |
       sh -c '
-      cd /chain_config;
-      /app/muta -c config-bft-4.toml init genesis.json;'
+      cd /app;
+      ./muta-chain;'
 
 networks:
   bft:
