--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -14,7 +14,7 @@ creep = "0.1"
 derive_more = "0.15"
 futures-preview = "0.3.0-alpha.19"
 log = "0.4"
-overlord = { git = "https://github.com/cryptape/overlord.git", branch = "dev" }
+overlord = { git = "https://github.com/cryptape/overlord.git", branch = "master" }
 parking_lot = "0.9"
 rlp = "0.4"
 serde = {version = "1.0", features = ["derive"]}
