--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ core-network = { path = "./core/network" }
 core-consensus = { path = "./core/consensus" }
 core-executor = { path = "./core/executor" }
 
-parking_lot = "0.9"
+futures = "0.3"
+parking_lot = "0.10"
 runtime = "0.3.0-alpha.7"
 runtime-tokio = "0.3.0-alpha.6"
 serde = "1.0"
