--- a/common/crypto/Cargo.toml
+++ b/common/crypto/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ophelia-bls12381 = { git = "https://github.com/zeroqn/ophelia.git", features = [ "generate" ] }
-ophelia-secp256k1 = { git = "https://github.com/zeroqn/ophelia.git" }
-ophelia = { git = "https://github.com/zeroqn/ophelia.git" }
+ophelia-bls12381 = { version = "0.1", features = [ "generate" ] }
+ophelia-secp256k1 = "0.1"
+ophelia = "0.1"
 
 [features]
 default = ["generate"]
