feat: add end to end test

--- a/devtools/docker/dockerfiles/Dockerfile.dev
+++ b/devtools/docker/dockerfiles/Dockerfile.dev
@@ -1,6 +1,5 @@
-FROM buildpack-deps:stretch
-
-RUN apt-get update && apt-get install -y cmake pkg-config libssl-dev git gcc build-essential clang libclang-dev
+FROM ubuntu:latest  
+RUN apt-get update && apt-get install -y cmake pkg-config libssl-dev git gcc build-essential clang libclang-dev openssl wget
 
 ENV RUSTUP_HOME=/usr/local/rustup \
     CARGO_HOME=/usr/local/cargo \
