--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ core-mempool = { path = "./core/mempool" }
 core-network = { path = "./core/network" }
 core-consensus = { path = "./core/consensus" }
 core-executor = { path = "./core/executor" }
+core-binding = { path = "./core/binding" }
+core-binding-macro = { path = "./core/binding-macro" }
 
 futures = "0.3"
 parking_lot = "0.10"
