feat(core/binding-macro): Add `read` and `write` proc-macro.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,8 @@ members = [
   "core/mempool",
   "core/network",
   "core/storage",
+  "core/binding",
+  "core/binding-macro",
 
   "protocol",
 ]
