--- a/core/binding-macro/Cargo.toml
+++ b/core/binding-macro/Cargo.toml
@@ -6,4 +6,15 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
+syn = { version = "1.0", features = ["full"] }
+proc-macro2 = "1.0"
+quote = "1.0"
+
+[dev-dependencies]
+protocol = { path = "../../protocol" }
+json = "0.12"
+bytes = "0.4"
