--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ members = [
   "core/mempool",
   "core/network",
   "core/storage",
+  "core/binding",
+  "core/binding-macro",
 
   "protocol",
 ]
