update overlord ref

--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -16,7 +16,7 @@ futures = { version = "0.3", features = ["async-await"] }
 futures-timer = "2.0"
 log = "0.4"
 moodyblues-sdk = { git = "https://github.com/homura/moodyblues-client-rust" }
-overlord = { git = "https://github.com/nervosnetwork/overlord", branch = "test" }
+overlord = { git = "https://github.com/nervosnetwork/overlord", rev = "33eb665" }
 parking_lot = "0.10"
 rlp = "0.4"
 serde = {version = "1.0", features = ["derive"]}
