--- a/core/binding-macro/Cargo.toml
+++ b/core/binding-macro/Cargo.toml
@@ -10,11 +10,16 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
+core-binding = { path = "../binding" }
+
 syn = { version = "1.0", features = ["full"] }
 proc-macro2 = "1.0"
 quote = "1.0"
 
 [dev-dependencies]
 protocol = { path = "../../protocol" }
+
 json = "0.12"
+serde_json = "1.0"
 bytes = "0.4"
+serde = { version = "1.0", features = ["derive"] }
