--- a/core/binding/Cargo.toml
+++ b/core/binding/Cargo.toml
@@ -18,5 +18,8 @@ lazy_static = "1.4"
 byteorder = "1.3"
 rlp = "0.4"
 futures = "0.3"
-async-trait = "0.1"
 json = "0.12"
+serde_json = "1.0"
+
+[dev-dependencies]
+async-trait = "0.1"
