--- a/common/crypto/Cargo.toml
+++ b/common/crypto/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ophelia-bls-amcl = "0.1"
 ophelia-secp256k1 = "0.2"
 ophelia = "0.2"
