--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -14,6 +14,7 @@ creep = "0.1"
 derive_more = "0.99"
 futures = { version = "0.3", features = ["async-await"] }
 futures-timer = "2.0"
+hex = "0.4"
 log = "0.4"
 moodyblues-sdk = { git = "https://github.com/homura/moodyblues-client-rust" }
 overlord = { git = "https://github.com/nervosnetwork/overlord", rev = "33eb665" }
