--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "core-binding"
+name = "framework"
 version = "0.1.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protocol = { path = "../../protocol" }
+protocol = { path = "../protocol" }
 
 hasher = { version = "0.1", features = ['hash-keccak'] }
 cita_trie = "2.0"
