--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -15,7 +15,7 @@ futures = { version = "0.3", features = ["async-await"] }
 futures-timer = "2.0"
 hex = "0.4"
 log = "0.4"
-moodyblues-sdk = { git = "https://github.com/homura/moodyblues-client-rust" }
+moodyblues-sdk = "0.2"
 overlord = { git = "https://github.com/nervosnetwork/overlord", rev = "4e2c0c6" }
 parking_lot = "0.10"
 rlp = "0.4"
