--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -20,12 +20,12 @@ prost = { git = "https://github.com/danburkert/prost", rev = "dfe51e9" }
 hasher = { version = "0.1", features = ['hash-keccak'] }
 creep = "0.1"
 bincode = "1.1"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rlp = "0.4"
 cita_trie = "2.0"
 json = "0.12"
+byteorder = "1.3"
 
 [dev-dependencies]
 num-traits = "0.2"
