--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 protocol = { path = "../protocol" }
+asset = { path = "../build-in-services/asset"}
 
 hasher = { version = "0.1", features = ['hash-keccak'] }
 cita_trie = "2.0"
@@ -20,6 +21,8 @@ rlp = "0.4"
 futures = "0.3"
 json = "0.12"
 serde_json = "1.0"
+hex = "0.4"
 
 [dev-dependencies]
 async-trait = "0.1"
+serde_yaml = "0.8"
