--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -12,19 +12,19 @@ derive_more = "0.15"
 async-trait = "0.1"
 lazy_static = "1.4"
 num-bigint = "0.2"
-ethbloom = "0.6"
+ethbloom = "0.8"
 bytes = "0.4"
 hex = "0.3"
 prost = "0.5"
 hasher = { version = "0.1", features = ['hash-keccak'] }
 creep = "0.1"
-bincode = "1.1"
-serde = "1.0"
-serde_derive = "1.0"
+bincode = "1.2"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rlp = "0.4"
 cita_trie = "2.0"
 json = "0.12"
+byteorder = "1.3"
 
 [dev-dependencies]
 num-traits = "0.2"
