--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -13,9 +13,10 @@ async-trait = "0.1"
 lazy_static = "1.4"
 num-bigint = "0.2"
 ethbloom = "0.8"
-bytes = "0.4"
+bytes = "0.5"
 hex = "0.3"
-prost = "0.5"
+# For bytes 0.5
+prost = { git = "https://github.com/danburkert/prost", rev = "dfe51e9" }
 hasher = { version = "0.1", features = ['hash-keccak'] }
 creep = "0.1"
 bincode = "1.1"
