--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ common-logger = { path = "./common/logger" }
 common-config-parser = { path = "./common/config-parser" }
 common-crypto = { path = "./common/crypto" }
 protocol = { path = "./protocol" }
-core-api = { path = "./core/api" }
+# core-api = { path = "./core/api" }
 core-storage = { path = "./core/storage" }
 core-mempool = { path = "./core/mempool" }
 core-network = { path = "./core/network" }
@@ -24,12 +24,12 @@ runtime = "0.3.0-alpha.7"
 runtime-tokio = "0.3.0-alpha.6"
 serde = "1.0"
 serde_derive = "1.0"
-serde_json = "1.0"
 log = "0.4"
 clap = "2.33"
-bytes = "0.4"
+bytes = "0.5"
 hex = "0.4"
 rlp = "0.4"
+toml = "0.5"
 
 [workspace]
 members = [
@@ -43,7 +43,7 @@ members = [
   "common/metrics",
   "common/pubsub",
 
-  "core/api",
+  # "core/api",
   "core/consensus",
   "core/mempool",
   "core/network",
