--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -21,6 +21,7 @@ parking_lot = "0.10"
 rlp = "0.4"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+cita_trie = "2.0"
 
 common-crypto = { path = "../../common/crypto"}
 common-logger = { path = "../../common/logger" }
