--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -12,7 +12,7 @@ asset = { path = "../built-in-services/asset"}
 
 hasher = { version = "0.1", features = ['hash-keccak'] }
 cita_trie = "2.0"
-bytes = "0.4"
+bytes = "0.5"
 derive_more = "0.15"
 rocksdb = "0.12"
 lazy_static = "1.4"
@@ -20,8 +20,9 @@ byteorder = "1.3"
 rlp = "0.4"
 futures = "0.3"
 json = "0.12"
-serde_json = "1.0"
 hex = "0.4"
+toml = "0.5"
+serde_json = "1.0"
 
 [dev-dependencies]
 async-trait = "0.1"
