--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ common-logger = { path = "./common/logger" }
 common-config-parser = { path = "./common/config-parser" }
 common-crypto = { path = "./common/crypto" }
 protocol = { path = "./protocol" }
-# core-api = { path = "./core/api" }
+core-api = { path = "./core/api" }
 core-storage = { path = "./core/storage" }
 core-mempool = { path = "./core/mempool" }
 core-network = { path = "./core/network" }
@@ -43,7 +43,7 @@ members = [
   "common/metrics",
   "common/pubsub",
 
-  # "core/api",
+  "core/api",
   "core/consensus",
   "core/mempool",
   "core/network",
