--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "muta-chain"
+name = "muta"
 version = "0.1.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
@@ -18,6 +18,7 @@ core-consensus = { path = "./core/consensus" }
 binding-macro = { path = "./binding-macro" }
 framework = { path = "./framework" }
 
+derive_more = "0.15"
 futures = "0.3"
 parking_lot = "0.10"
 runtime = "0.3.0-alpha.7"
@@ -30,6 +31,9 @@ bytes = "0.5"
 hex = "0.4"
 rlp = "0.4"
 toml = "0.5"
+
+[dev-dependencies]
+asset = { path = "built-in-services/asset"}
 
 [workspace]
 members = [
@@ -55,3 +59,7 @@ members = [
 
   "protocol",
 ]
+
+[[example]]
+name = "muta-chain"
+crate-type = ["bin"]
