--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -18,7 +18,7 @@ generic-channel = { version = "0.2", features = [ "all" ] }
 log = "0.4"
 parking_lot = "0.9"
 # For bytes 0.5
-prost = { git = "https://github.com/danburkert/prost", rev = "dfe51e9" }
+muta-vendor-prost = "0.5"
 # prost request explicitly list bytes here
 bytes = "0.5"
 rand = "0.7"
