--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -16,7 +16,7 @@ ethbloom = "0.8"
 bytes = "0.5"
 hex = "0.3"
 # For bytes 0.5
-prost = { git = "https://github.com/danburkert/prost", rev = "dfe51e9" }
+muta-vendor-prost = "0.5"
 hasher = { version = "0.1", features = ['hash-keccak'] }
 creep = "0.1"
 bincode = "1.2"
