chore: Update the version in Cargo.toml.

--- a/binding-macro/Cargo.toml
+++ b/binding-macro/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "binding-macro"
-version = "0.1.0"
+version = "0.1.0-alpha.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
+repository = "https://github.com/nervosnetwork/muta"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,7 +12,7 @@ proc-macro = true
 doctest = false
 
 [dependencies]
-protocol = { path = "../protocol" }
+protocol = { path = "../protocol", package = "muta-protocol" }
 
 syn = { version = "1.0", features = ["full"] }
 proc-macro2 = "1.0"
