--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "core-consensus"
-version = "0.1.0"
+version = "0.1.0-alpha.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
+repository = "https://github.com/nervosnetwork/muta"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -29,7 +30,7 @@ common-merkle = { path = "../../common/merkle"}
 core-mempool = { path = "../../core/mempool"}
 core-storage = { path = "../../core/storage"}
 core-network = { path = "../../core/network"}
-protocol = { path = "../../protocol" }
+protocol = { path = "../../protocol", package = "muta-protocol" }
 
 [dev-dependencies]
 num-traits = "0.2"
