--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "framework"
-version = "0.1.0"
+version = "0.1.0-alpha.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
+repository = "https://github.com/nervosnetwork/muta"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protocol = { path = "../protocol" }
+protocol = { path = "../protocol", package = "muta-protocol" }
 asset = { path = "../built-in-services/asset"}
 
 hasher = { version = "0.1", features = ['hash-keccak'] }
