--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "muta"
-version = "0.1.0"
+version = "0.1.0-alpha.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
+repository = "https://github.com/nervosnetwork/muta"
 
 [dependencies]
 common-logger = { path = "./common/logger" }
 common-config-parser = { path = "./common/config-parser" }
 common-crypto = { path = "./common/crypto" }
-protocol = { path = "./protocol" }
+protocol = { path = "./protocol", package = "muta-protocol" }
 core-api = { path = "./core/api" }
 core-storage = { path = "./core/storage" }
 core-mempool = { path = "./core/mempool" }
