--- a/common/logger/Cargo.toml
+++ b/common/logger/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "common-logger"
-version = "0.1.0"
+version = "0.1.0-alpha.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
+repository = "https://github.com/nervosnetwork/muta"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
