--- a/core/api/Cargo.toml
+++ b/core/api/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "core-api"
-version = "0.1.0"
+version = "0.1.0-alpha.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
+repository = "https://github.com/nervosnetwork/muta"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protocol = { path = "../../protocol" }
+protocol = { path = "../../protocol", package = "muta-protocol" }
 common-crypto = { path = "../../common/crypto"}
 
 http-service = "0.4"
