--- a/devtools/keypair/Cargo.toml
+++ b/devtools/keypair/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "keypair"
-version = "0.1.0"
+version = "0.1.0-alpha.0"
 authors = ["zero.qn <zero.qn@outlook.com>"]
 edition = "2018"
+repository = "https://github.com/nervosnetwork/muta"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 common-crypto = { path = "../../common/crypto" }
-protocol = { path = "../../protocol" }
+protocol = { path = "../../protocol", package = "muta-protocol" }
 
 hex = "0.4"
 rand = "0.7"
