--- a/binding-macro/Cargo.toml
+++ b/binding-macro/Cargo.toml
@@ -19,6 +19,7 @@ proc-macro2 = "1.0"
 quote = "1.0"
 derive_more = "0.15"
 serde_json = "1.0"
+static_assertions = "1.1.0"
 
 [dev-dependencies]
 framework = { path = "../framework" }
