feat: add exec_epoch_id to EpochHeader

--- a/devtools/chain/config.toml
+++ b/devtools/chain/config.toml
@@ -42,7 +42,7 @@ precommit_ratio = 10
 light = false
 
 [logger]
-filter = "info"
+filter = "error"
 log_to_console = true
 console_show_file_and_line = false
 log_path = "logs/"
